--- a/vans-ui/src/app/globals.css
+++ b/vans-ui/src/app/globals.css
@@ -1,34 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-import '@radix-ui/themes/styles.css';
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: rgb(206,205,218);
+  background: radial-gradient(circle, rgba(206,205,218,1) 0%, rgba(51,69,157,1) 100%);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+
+.vp {
+  height: calc(100svh - 82px);
 }
